# Daily-text-database

./: daily.py  daily.sqlite  pyproject.toml
