[tool.poetry]
name = "daily-text-database"
version = "0.1.0"
description = ""
authors = ["Unviray <unviray@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
peewee = "^3.14.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
